advanced-ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: test100
  annotations:
    virtual-server.f5.com/ip: "192.168.200.11"
spec:
  rules:
  - host: test100.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: test101
  annotations:
    virtual-server.f5.com/ip: "192.168.200.11"
spec:
  rules:
  - host: test101.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: test102
  annotations:
    virtual-server.f5.com/ip: "192.168.200.12"
spec:
  rules:
  - host: test102.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
